Compilers construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/110_expecting2_given3.xi
f():int,int
{
    return 1,2,3
}
//@PRACOWNIA
//@should_not_typecheck
